2008-07-23  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-rhino.patch: Updated.

2008-07-22  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-gcc-4.3.patch,
	* patches/icedtea-sparc.patch: Removed.
	* HACKING: Updated.
	* Makefile.am: Move to b31, remove patches listed above
	and fix escaping on hg clone line.
	* acinclude.m4: Only set ALT_OPENJDK_SRC_ZIP when
	needed.
	* configure.ac: Don't bother with GCC_OLD.
	* patches/icedtea-text-relocations.patch: Reapplied to b31.
	* patches/icedtea-use-system-tzdata.patch: Make solution
	work on g++ 4.3.
	* patches/icedtea-zero-build.patch: Reapplied.
	* fsg.sh: Remove deletion of winver.exe as already removed
	from tarball.
	
2008-07-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-nomotif-6706121.patch,
	* patches/icedtea-nomotif.patch:
	Removed; already present in b30.
	* HACKING: Updated.
	* Makefile.am: Remove unneeded patches.
	* patches/icedtea-ecj.patch,
	* patches/icedtea-jdk-docs-target.patch,
	* patches/icedtea-webstart-umask.patch:
	Fixed to apply against b30.

2008-07-20  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-nomotif-6706121.patch, patches/icedtea-nomotif.patch:
	New.
	* Makefile.am (ICEDTEA_PATCHES): Add patches.
	* configure.ac: Remove lesstif check.
	* INSTALL: Remove lesstif from build requirements.

2008-07-20  Matthias Klose  <doko@ubuntu.com>

	* acinclude.m4 (SET_ARCH_DIRS): Add powerpc and powerpc64 configs.

2008-07-16  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Fixed typos.

2008-07-16  Matthias Klose  <doko@ubuntu.com>

	* fsg.sh: Update for b11 code drop.
	* Makefile.am: Update for b11.
	* patches/icedtea-license-headers.patch, patches/icedtea-idl.patch,
	patches/icedtea-jscheme.patch, patches/icedtea-security-updates.patch,
	patches/icedtea-eclipse-hotspot-6614100-6b06.patch,
	patches/icedtea-gtkplaf.patch, patches/icedtea-dnd-updatecursor.patch,
	patches/icedtea-component.patch: Remove, applied upstream.